Inaugurate off and banner fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
   <body>
 
-    <div id="preloader"></div>
+    <!-- <div id="preloader"></div> -->
     <!-- Nav bar -->
     <div class="inauguration-main">
       <div class="in_container">
@@ -147,7 +147,8 @@
             <div class="club_info">
                 <div class="card">
                     <div class="card-img">
-                      <img src="./Images/coding_banner.png" alt="">
+                      <img class="desktop"  src="./Images/coding_banner.png" alt="">
+                      <img class="mobile" src="./Images/coding.png" alt="">
                     </div>
                     <div class="card-content">
                       <div class="card-heading-container">
@@ -160,17 +161,15 @@
                             </div>
                         </div>
                       <p class="card-description">
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
+                        The Coding Club is an educational group dedicated to providing a safe and supportive environment in which individuals of any age and skill level can learn the basics of coding and computer programming. We provide courses, workshops, and resources to help members explore coding and develop their coding skills. We also host events and activities to foster collaboration and networking among our members. Our goal is to cultivate a community of coders, both new and experienced, who can learn, share, and inspire each other to achieve their coding goals.
                       </p>
                       <button class="view-more">View More</button>
                     </div>
                   </div>
                 <div class="card">
                     <div class="card-img">
-                      <img src="./Images/design_banner.png" alt="">
+                      <img class="desktop"  src="./Images/design_banner.png" alt="">
+                      <img class="mobile" src="./Images/design.png" alt="">
                     </div>
                     <div class="card-content">
                       <div class="card-heading-container">
@@ -183,17 +182,15 @@
                             </div>
                         </div>
                       <p class="card-description">
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
+                        Design Club is a space for creative minds to come together and collaborate on design projects. This club provides members with the opportunity to learn about design principles, explore the creative process, discuss new trends, and network with other like-minded individuals. Through activities such as workshops, guest lectures, design challenges, and portfolio reviews, members will develop their design skills and gain insight into the world of design. This club is open to all levels and backgrounds, so no matter your experience, you can find a place to contribute your ideas and learn from the collective knowledge of the group.
                       </p>
                       <button class="view-more">View More</button>
                     </div>
                   </div>
                 <div class="card">
                     <div class="card-img">
-                      <img src="./Images/geekhub_banner.png" alt="">
+                      <img class="desktop"  src="./Images/geekhub_banner.png" alt="">
+                      <img class="mobile" src="./Images/geekhub.png" alt="">
                     </div>
                     <div class="card-content">
                       <div class="card-heading-container">
@@ -206,17 +203,15 @@
                             </div>
                         </div>
                       <p class="card-description">
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
+                        The GeekHUB is a community club that aims at more student engagement, increased group knowledge sharing, inspiration for new projects and peers, constant self-improvement and mostly importantly to have FUN!
                       </p>
                       <button class="view-more">View More</button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
-                      <img src="./Images/technovation_banner.png" alt="">
+                      <img class="desktop"  src="./Images/technovation_banner.png" alt="">
+                      <img class="mobile" src="./Images/technovation.png" alt="">
                     </div>
                     <div class="card-content">
                       <div class="card-heading-container">
@@ -229,10 +224,9 @@
                             </div>
                         </div>
                       <p class="card-description">
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
-                        My attractive, functional and easy to use UX/UI will attract your users attract your users
+                        The Technovation Club is a welcoming environment where technovates will learn about the most recent technological advancements,
+ by offering a range of engaging seminars and hands-on learning opportunities.
+ The interest in learning is the sole prerequisite for joining the group.
                       
                       </p>
                       <button class="view-more">View More</button>
@@ -269,8 +263,7 @@
                         <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
                     </div>
                     <div class="card-description">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Molestias culpa soluta corporis.
+                      Interactive learning events designed to provide hands-on experience in a specific subject.
                     </div>
                 </div>
             </div>
@@ -280,11 +273,10 @@
                         <h3 class="card-heading">
                           Hackathons
                         </h3>
-                        <div class="circle"><img src="./Images/Icons/hackathon.svg" alt="Competitions"></div>
+                        <div class="circle"><img src="./Images/Icons/hackathon.svg" alt="Hackathons"></div>
                     </div>
                     <div class="card-description">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Molestias culpa soluta corporis.
+                      Creative minds come together to develop innovative solutions to challenging problems.
                     </div>
                 </div>
             </div>
@@ -294,11 +286,10 @@
                         <h3 class="card-heading">
                             Projects
                         </h3>
-                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Projects"></div>
                     </div>
                     <div class="card-description">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Molestias culpa soluta corporis.
+                        Working on real world projects to gain practical experience and enhance technical skills.
                     </div>
                 </div>
             </div>
@@ -308,11 +299,10 @@
                         <h3 class="card-heading">
                             Peer Learning
                         </h3>
-                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Peer Learning"></div>
                     </div>
                     <div class="card-description">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Molestias culpa soluta corporis.
+                      Engage in the learning process and collaboration by participating in real world projects
                     </div>
                 </div>
             </div>
@@ -322,11 +312,10 @@
                         <h3 class="card-heading">
                             Mentorship
                         </h3>
-                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Mentorship"></div>
                     </div>
                     <div class="card-description">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Molestias culpa soluta corporis.
+                      Sharing of knowledge, experience with peers to help them develop their skills and reach their goals.
                     </div>
                 </div>
             </div>
@@ -334,13 +323,12 @@
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
-                            Contents
+                            Contests
                         </h3>
-                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Contents"></div>
                     </div>
                     <div class="card-description">
-                        Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Molestias culpa soluta corporis.
+                      Platform to compete with peers in various contests to get motivation and strive for excellence.
                     </div>
                 </div>
             </div>
