--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
             </div>
           
             <p>
-              We are a Technical club of CEC aiming at Realizing the idea and
-              Inspiring the next!
+              A space to discuss and explore new technologies.
             </p>
             <a class="button btn" href="team.html">
                 <span></span>
