--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Geeks Of Canara</title>
+  <link rel="icon" href="./Images/Icons/GOC_FAV.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -16,15 +17,12 @@
 
   <div id="preloader"></div>
   <!-- Nav bar -->
- <div class="inauguration-main">
-    <!-- <div id="preloader"></div> -->
-    <!-- Nav bar -->
-    <div class="inauguration-main">
+  <div class="inauguration-main">
       <div class="in_container">
         <button class="inaugurate">Click to Launch</button>
       </div>
     </div>
-    <canvas class="confetti" id="canvas"></canvas>  
+    <canvas class="confetti" id="canvas"></canvas> 
   <nav id="nav">
     <div class="container-fluid">
       <a class="navbar-brand" href="/index.html">GOC </a>
