--- a/events.html
+++ b/events.html
@@ -19,42 +19,42 @@
 
     <div class="modal-container">
         <button class="close-button">X</button>
-        <section class="modal-left splide" aria-label="Splide Basic HTML Example">
+        <section class="modal-left">
             <div class="splide__track">
                   <ul class="splide__list">
                       <li class="splide__slide">
-                        <img class="slide-img" src="./Images/hero-illustration.png" />
+                        <img class="slide-img"/>
                     </li>
-                    <li class="splide__slide">
+                    <!-- <li class="splide__slide">
                           <img class="slide-img" src="./Images/hero-illustration.png" />
                         </li>
                         <li class="splide__slide">
                           <img class="slide-img" src="./Images/hero-illustration.png" />
-                      </li>
+                      </li> -->
                   </ul>
             </div>
           </section>
   
         <div class="modal-right">
           <div class="modal-heading-container">
-            <div class="modal-sub-heading">21-11-2022</div>
-            <h2 class="modal-heading">Git and Github workshop</h2>
+            <div class="modal-sub-heading" id="event-data-date"></div>
+            <h2 class="modal-heading" id="event-data-title"></h2>
           </div>
   
           <div class="about-container">
             <div class="modal-sub-heading about">About:</div>
-            <p class="modal-description">We are a Technical club of CEC aiming at Realizing the idea and Inspiring the next! We are a Technical club of CEC aiming at Realizing the idea and Inspiring the next! We are a Technical club of CEC aiming at Realizing the idea and Inspiring the next! </p>
+            <p class="modal-description" id="event-data-description"></p>
           </div>
           
           <div class="event-info-container">
               <div class="event-info">Organized by:</div>
-              <div>Coding Club</div>
+              <div id="event-data-club"></div>
               <div class="event-info">Resource person:</div>
-              <div>Karthik Prabhu</div>
+              <div id="event-data-rp"></div>
           </div>
           <div class="button-container">
             <button class="modal-button">
-              <span>Explore Our Team <img src="./Images/arrow.svg" alt="arrow"></span>
+              <span>Resources</span>
             </button>
           </div>
         </div>
@@ -101,7 +101,7 @@
   <div class="loader-parent"><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div>
 
     <!-- Event Section Begin-->
-    <div class="team-area">
+    <div class="team-area events-area">
         <div class="sub-nav">
             <div class="nav_head">Events</div>
 
@@ -154,12 +154,14 @@
     <script src="./events.js"></script>
     <script src="./slider.js"></script>
     <script>
+      window.addEventListener("load", ()=>{
       pre = document.getElementsByClassName('loader-parent');
       nav = document.querySelector('.navbar');
-      window.addEventListener("load", setTimeout(function () {
+      setTimeout(function () {
         nav.style.display="flex";
-          pre[0].style.display = 'none';
-      }, 2000))
+        pre[0].style.display = 'none';
+      }, 2000)
+    })
     </script>
 </body>
 
