--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
   <body>
 
-    <!-- <div id="preloader"></div> -->
+    <div id="preloader"></div>
     <!-- Nav bar -->
     <div class="inauguration-main">
       <div class="in_container">
