--- a/team.html
+++ b/team.html
@@ -314,6 +314,19 @@
             <div>
               <img
                 class="card-img"
+                src="./Images/team/members/ProjectGuide/PG_DeepakD.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Project Mentor</p>
+              <p class="head_name">Deepak D</p>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
                 src="./Images/team/members/CodingClub/CC_Alok_Ranjan.jpg"
                 alt=""
               />
