--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
             <h3 class="card-heading">
               Projects
             </h3>
-            <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+            <div class="circle"><img src="./Images/Icons/project.svg" alt="Workshops"></div>
           </div>
           <div class="card-description">
             Working on real world projects to gain practical experience and enhance technical skills.
@@ -428,7 +428,7 @@
             <h3 class="card-heading">
               Peer Learning
             </h3>
-            <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+            <div class="circle"><img src="./Images/Icons/peer_learning.svg" alt="Workshops"></div>
           </div>
           <div class="card-description">
             Engage in the learning process and collaboration by participating in real world projects.
@@ -441,7 +441,7 @@
             <h3 class="card-heading">
               Mentorship
             </h3>
-            <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+            <div class="circle"><img src="./Images/Icons/mentorship.svg" alt="Workshops"></div>
           </div>
           <div class="card-description">
             Sharing of knowledge, experience with peers to help them develop their skills and reach their goals.
@@ -454,7 +454,7 @@
             <h3 class="card-heading">
               Contests
             </h3>
-            <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
+            <div class="circle"><img src="./Images/Icons/contest.svg" alt="Workshops"></div>
           </div>
           <div class="card-description">
             Platform to compete with peers in various contests to get motivation and strive for excellence.
