--- a/events.html
+++ b/events.html
@@ -120,35 +120,38 @@
         <!-- Footer Section -->
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="social_link">
-            <a href="#" class="sm_container">
-                <div><img src="./Images/instagram.svg" alt="Instagram" /></div>
-            </a href="#">
-            <a href="#" class="sm_container">
-                <div><img src="./Images/facebook.svg" alt="Facebook" /></div>
-            </a href="#">
-            <a href="#" class="sm_container">
-                <div><img src="./Images/linkedin.svg" alt="LinkedIn" /></div>
-            </a href="#">
-            <a href="#" class="sm_container">
-                <div><img src="./Images/email.svg" alt="Gmail" /></div>
-            </a href="#">
-        </div>
-        <div class="nav_links">
-            <ul>
-                <li><a href="index.html" class="first_link">Home</a></li>
-                <li><a href="index.html#our_club">Clubs</a></li>
-                <li><a href="index.html#goals">Goals</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="/team.html" class="last_link">Team</a></li>
-            </ul>
-        </div>
-        <div class="copyright">
-            <p><span>&copy;</span> GeeksofCanara <span>2022</span></p>
-        </div>
-    </footer>
+      <!-- Footer Section -->
+  <footer>
+    <div class="social_link">
+      <a href="#" class="sm_container">
+        <div><img src="./Images/instagram.svg" alt="Instagram" /></div>
+      </a href="#">
+      <a href="#" class="sm_container">
+        <div><img src="./Images/facebook.svg" alt="Facebook" /></div>
+      </a href="#">
+      <a href="#" class="sm_container">
+        <div><img src="./Images/linkedin.svg" alt="LinkedIn" /></div>
+      </a href="#">
+      <a href="#" class="sm_container">
+        <div><img src="./Images/email.svg" alt="Gmail" /></div>
+      </a href="#">
+    </div>
+    <div class="nav_links">
+      <ul>
+        <li><a href="#" class="first_link">Home</a></li>
+        <li><a href="#our_club">Clubs</a></li>
+        <li><a href="#goals">Goals</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="/team.html" class="last_link">Team</a></li>
+      </ul>
+    </div>
+    <div class="copyright">
+      <p><span>&copy;</span> GeeksofCanara <span>2022</span><span> ~ </span><a href="/developers.html" class="meet">Meet
+          The Team</a></p>
+
+    </div>
+
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="./dist//js/splide.min.js"></script>
     <script src="./events.js"></script>
