--- a/developers.html
+++ b/developers.html
@@ -202,7 +202,7 @@
 							</span>
 						</div>
 						<div class="person-info">
-							<h3 class="full-name">Shreenivas Shenoy</h3>
+							<h3 class="full-name">S Sreenivasa Shenoy</h3>
 							<span class="speciality">Web Designer</span>
 						</div>
 					</div>
